After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 578250 - panel buttons fail to unhighlight
panel buttons fail to unhighlight
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2009-04-07 14:50 UTC by Dan Winship
Modified: 2009-05-05 17:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Select for crossing events on stage and overlay (1.41 KB, patch)
2009-05-03 22:23 UTC, Owen Taylor
none Details | Review

Description Dan Winship 2009-04-07 14:50:41 UTC
If you move into the "Activities" or user menu buttons on the panel, it highlights (or actually "lowlights", but whatever). And if you move out of the button *horizontally* it unhighlights. But if you move out of it vertically, it remains highlighted, presumably because we're not getting a leave event when the mouse actually leaves the stage input area.
Comment 1 Owen Taylor 2009-05-03 22:21:25 UTC
See:

http://bugzilla.openedhand.com/show_bug.cgi?id=1178

for a Clutter bug that was the main problem when I first investigated this. That has been fixed now; we just need to select for the events in mutter.

Reassigning to Mutter, I'll attach a patch there.
Comment 2 Owen Taylor 2009-05-03 22:23:40 UTC
Created attachment 133886 [details] [review]
Select for crossing events on stage and overlay

If the input region has been shaped, then clutter needs to
receive EnterNotify/LeaveNotify events in order to properly
send enter and leave events to actors when the pointer crosses
the boundary of the stage.
Comment 3 Tomas Frydrych 2009-05-05 09:25:13 UTC
Please commit.
Comment 4 Owen Taylor 2009-05-05 17:57:40 UTC
Pushed